--- a/index.html
+++ b/index.html
@@ -88,11 +88,9 @@
                         </div>
                     </div>
                 </div>
-                <!-- Placeholder for an image since we don't have the original assets -->
                 <div class="about-image-container fade-in-right">
-                    <div class="image-placeholder">
-                        <i class="fas fa-utensils"></i>
-                    </div>
+                    <img src="Imagenes/Trompo-pastor.webp" alt="Trompo al pastor"
+                        style="width: 100%; height: 100%; object-fit: cover; z-index: 1;">
                 </div>
             </div>
         </div>
@@ -140,8 +138,26 @@
                         casa.</p>
                     <a href="#menu" class="btn btn-text">Ordenar Ahora <i class="fas fa-arrow-right"></i></a>
                 </div>
-                <div class="map-card">
-                    <div class="map-container">
+                <div class="service-card">
+                    <i class="fas fa-concierge-bell"></i>
+                    <h3>Taquizas</h3>
+                    <p>Llevamos el auténtico sabor hidalguense a tus eventos. Cotiza tu taquiza con nosotros.</p>
+                    <a href="#contact" class="btn btn-text">Cotizar Ahora <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer / Contact -->
+    <footer id="contact" class="footer">
+        <div class="container">
+            <div class="contact-location" style="margin-bottom: 60px;">
+                <div class="section-header fade-in">
+                    <h2 class="section-title">Encuéntranos</h2>
+                    <div class="separator"></div>
+                </div>
+                <div class="map-card fade-in-up">
+                    <div class="map-container" style="height: 350px;">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3763.5074218698187!2d-99.61067512403666!3d19.30658538183177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cd8bd4c13a378d%3A0x7d01a91e1d7a3120!2sHidalguense%20Toluca!5e0!3m2!1sen!2smx!4v1708449091934!5m2!1sen!2smx"
                             width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
@@ -156,12 +172,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <!-- Footer / Contact -->
-    <footer id="contact" class="footer">
-        <div class="container">
             <div class="footer-grid">
                 <div class="footer-info">
                     <h3>El saborcito Hidalguense</h3>
