--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="about-image-container fade-in-right">
-                    <img src="Imagenes/Trompo-pastor.webp" alt="Trompo al pastor"
+                    <img src="Trompo-pastor.webp" alt="Trompo al pastor"
                         style="width: 100%; height: 100%; object-fit: cover; z-index: 1;">
                 </div>
             </div>
